2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs : lock list when releasing its content contexts.
	* AspNetReplyChannel.cs : send EndRequest() to handler when it is
	  closing.

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandlerFactory.cs : remove todo.
	* ReplyChannelBase.cs : add comment.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpTransportBindingElement.cs, SvcHttpHandlerFactory.cs :
	  revert the change, to use internal asp.net state again.
	* SvcHttpHandler.cs : add VirtualPathExtension.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs, AspNetReplyChannel.cs, AspNetRequestContext.cs:
	  asp.net response was not written correctly.
	  Fill HttpRequestMessageProperty to get handle WSDL requests
	  processed in ServiceMetadataExtension without NRE.
	  Remove wrong HttpListenerContext iteration at Abort and Close in
	  common base class and move it to non-asp derived channel.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : remove unused code.

2009-09-30  Jb Evain  <jbevain@novell.com>

	* HttpRequestChannel.cs: When compiling for MonoTouch, avoid
	to use any of the remoting features.

2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandlerFactory.cs, HttpTransportBindingElement.cs :
	  use AspNetCompatibilityEnabled.
	* SvcHttpHandler.cs : disable ApplyConfiguration(). It should be done
	  at ServiceHostBase.
	* AspNetReplyChannel.cs : remove extra field.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs : remove extra field.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* AspNetRequestContext.cs : remove CWL.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* AspNetReplyChannel.cs, AspNetRequestContext.cs : close HttpContext
	  only after AspNetRequestContext is closed. Do not close it
	  immediately after receiving the context. (HttpRuntime destructs it
	  and further uses then becomes impossible.)
