@@ -130,6 +130,17 @@ namespace System.ServiceModel.Channels
 
 			throw new NotSupportedException (String.Format ("Channel type {0} is not supported", typeof (TChannel)));
 		}
+
+		protected override void OnAbort ()
+		{
+			HttpHandler.CloseServiceChannel ();
+		}
+
+		protected override void OnClose (TimeSpan timeout)
+		{
+			HttpHandler.CloseServiceChannel ();
+			base.OnClose (timeout);
+		}
 	}
 
 	internal abstract class HttpChannelListenerBase<TChannel> : InternalChannelListenerBase<TChannel>
@@ -159,14 +170,9 @@ namespace System.ServiceModel.Channels
 			get { return encoder; }
 		}
 
-		protected IList<TChannel> Channels {
-			get { return channels; }
-		}
-
 		protected override TChannel OnAcceptChannel (TimeSpan timeout)
 		{
 			TChannel ch = CreateChannel (timeout);
-			Channels.Add (ch);
 			return ch;
 		}
 
@@ -189,8 +195,6 @@ namespace System.ServiceModel.Channels
 		protected override void OnClose (TimeSpan timeout)
 		{
 			DateTime start = DateTime.Now;
-			foreach (TChannel ch in new List<TChannel> (Channels)) // they will be removed during iteration, so create another one
-				ch.Close (timeout - (DateTime.Now - start));
 			base.OnClose (timeout - (DateTime.Now - start));
 		}
 	}
